# gameboy-emulator

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  unocss.config.ts  vite.config.ts  vite.config.ts.timestamp-1739804047917-5df68827e1359.mjs
emulator/: Cargo.toml
emulator/pkg/: emulator.d.ts  emulator.js  emulator_bg.wasm  emulator_bg.wasm.d.ts  gameboy_bg.js  gameboy_bg.wasm  package.json
emulator/src/: error.rs  lib.rs  log.rs  types.rs
emulator/src/cartridge/: header.rs  mod.rs
emulator/src/cpu/: cb.rs  ime.rs  mod.rs  regs.rs
emulator/src/dev/: bus.rs  buttons.rs  clock.rs  hram.rs  int_regs.rs  io_regs.rs  mod.rs  oam.rs  rams.rs  rtc.rs  serial.rs  timer.rs  vram.rs  wram.rs
emulator/src/dev/apu/: chan1.rs  chan2.rs  chan3.rs  chan4.rs  mod.rs  modulation.rs
emulator/src/dev/bus/: breakpoint.rs  mod.rs
emulator/src/dev/cart/: header.rs  mod.rs
emulator/src/dev/cart/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mod.rs  no_mbc.rs  rtc.rs
emulator/src/dev/cartridge/: header.rs  mod.rs
emulator/src/dev/cartridge/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mod.rs  no_mbc.rs
emulator/src/dev/cpu/: cb.rs  ime.rs  inst.rs  mod.rs  regs.rs
emulator/src/dev/gamepad/: mod.rs
emulator/src/dev/ppu/: bgp.rs  dma.rs  fetcher.rs  graphic.rs  lcd.rs  lcdc.rs  lcds.rs  mod.rs  oam.rs  vram.rs
emulator/src/dump/: mod.rs
emulator/src/emulator/: mod.rs
emulator/src/output/: audio.rs  log.rs  mod.rs  screen.rs  serial.rs
emulator/src/trace/: mod.rs
emulator/src/utils/: bit_proxy.rs  bits.rs  bytes.rs  mod.rs
(+101 files in other folders)
