[package]
name = "emulator"
version = "0.1.0"
authors = ["ashenye <luren145@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4.21"
js-sys = "0.3.69"
serde = { version = "1.0.202", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
thiserror = "1.0.61"
tsify = "0.4.5"
web-sys = { version = "0.3.76", features = ["ImageData", "OffscreenCanvasRenderingContext2d"] }
smallvec = "1.14.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
